overflow fixes

--- a/client/assets/styles/scss/sidebar/sidebar.scss
+++ b/client/assets/styles/scss/sidebar/sidebar.scss
@@ -118,6 +118,7 @@
 
     // reset branch header
     &.small {
+      font-weight: 500;
       pointer-events: auto;
     }
 
